💄  Fix category layout shifting

--- a/src/style.css
+++ b/src/style.css
@@ -945,15 +945,18 @@ blockquote p:before {
 }
 
 .cat-title-grid-container {
-  display: grid;
-  grid-template-columns: auto auto;
-  padding: 1rem 1.5rem;
+  display: flex;
+  /* grid-template-columns: auto auto; */
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1.5rem;
   background-color: #f5f5f5;
-  min-height: 90px;
+  min-height: 4.25rem;
 }
 
 .cat-title-grid-container h2.cat-title {
   margin: 0;
+  /* display: flex; */
   color: #333;
 }
 
